--- a/app/Resources/views/cours/adminDevoir.html.twig
+++ b/app/Resources/views/cours/adminDevoir.html.twig
@@ -44,7 +44,7 @@
                             <div class="nomAssoc inlineBtn">{{ valR.nom }}</div>
                         </div>
                         <div class="col-xs-3 text-right">
-                            <a class="myBtn btnZoom inlineBtn" href="{{ valR.url }}" target="_blank">
+                            <a class="myBtn btnZoom inlineBtn" href="{{ asset(valR.url) }}" target="_blank">
                                 <i class="fa fa-search"></i>
                             </a>
                             <div class="myBtn btnDelete inlineBtn btnRemoveSujetFromDevoir">
@@ -66,7 +66,7 @@
                             <div class="nomAssoc inlineBtn">{{ valR.nom }}</div>
                         </div>
                         <div class="col-xs-3 text-right">
-                            <a class="myBtn btnZoom inlineBtn" href="{{ valR.url }}" target="_blank">
+                            <a class="myBtn btnZoom inlineBtn" href="{{ asset(valR.url) }}" target="_blank">
                                 <i class="fa fa-search"></i>
                             </a>
                             <div class="myBtn btnDelete inlineBtn btnRemoveCorrigeTypeFromDevoir">
