--- a/app/Resources/views/cours/adminGroupe.html.twig
+++ b/app/Resources/views/cours/adminGroupe.html.twig
@@ -58,7 +58,7 @@
                             <div class="nomAssoc inlineBtn">
                                 <a class="btnLienGroupeRessource btn btn-xs"
                                    style="background-color: {{ valR.categorieLien.couleur }};" target="_blank"
-                                   href="{{ valR.lien.url }}">{{ valR.nom }}</a>
+                                   href="{{ asset(valR.lien.url) }}">{{ valR.nom }}</a>
                             </div>
                         </div>
                         <div class="col-xs-2 text-right noPadding">
