--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -220,8 +220,7 @@
                             }
                         }
 
-                        var url = steps + folderLocation + $('[data-coursId]').attr('data-coursId') + '/devoir/' + idItem + '/copies/' + $('[data-userId]').attr('data-userId') + '/';
-
+                        var url = 'upload/' + $('[data-coursId]').attr('data-coursId') + '/devoir/' + idItem + '/copies/' + $('[data-userId]').attr('data-userId') + '/';
                         $.ajax({
                             type: 'POST',
                             url: "{{ path('checkDirForUploadFile_ajax') }}",
@@ -237,7 +236,7 @@
                         });
 
                         $('#copieUpload').fileupload({
-                            url: steps + upload_srcSteps + upload_course + folderLocation,
+                            url: "/upload/index.php",
                             dropZone: null,
                             dataType: 'json',
                             add: function (e, data) {
@@ -262,9 +261,8 @@
                                         data: {
                                             itemId: idItem,
                                             userId: $('[data-userId]').attr('data-userId'),
-                                            url: steps + folderLocation + myUrlTab[1],
+                                            filenameUrl: myUrlTab[0],
                                             urlDest: url,
-                                            currentUrl: window.location.pathname
                                         },
                                         success: function (data) {
                                             $('.modal').modal('toggle');
@@ -693,12 +691,12 @@
                                                                 <video style="max-width: 600px;" controls
                                                                        preload="metadata"
                                                                        poster="https://www.studit.fr/poster.png">
-                                                                    <source src="{{ valR.url }}" type="video/mp4">
+                                                                    <source src="{{ asset(valR.url) }}" type="video/mp4">
                                                                     Votre navigateur ne supporte pas la balise "video".
                                                                 </video>
                                                             {% elseif '.mp3' in valR.url %}
                                                                 <audio style="max-width: 600px;" controls>
-                                                                    <source src="{{ valR.url }}" type="audio/mpeg">
+                                                                    <source src="{{ asset(valR.url) }}" type="audio/mpeg">
                                                                     Votre navigateur ne supporte pas la balise "audio".
                                                                 </audio>
                                                             {% endif %}
@@ -706,7 +704,7 @@
                                                         <div class="col-xs-2 text-right">
                                                             <a class="btn btnLien btn-sm btn-warning {{ btnUserStatRessource }}"
                                                                target="_blank"
-                                                               href="{{ valR.url }}"
+                                                               href="{{ asset(valR.url) }}"
                                                                data-statRessId="{{ valR.id }}"
                                                             >
                                                                 {% if valR.typeLien.faIcon is defined %}
@@ -770,7 +768,7 @@
                                                                                 {% for keyS,valS in val.zones.sujet[keyR] %}
                                                                                     <a class="btn btn-sm btn-info mb-3 hidden"
                                                                                        target="_blank"
-                                                                                       href="{{ valS.url }}">{{ valS.nom }}</a>
+                                                                                       href="{{ asset(valS.url) }}">{{ valS.nom }}</a>
                                                                                 {% endfor %}
                                                                             </div>
                                                                         </div>
@@ -789,7 +787,7 @@
                                                                             {% for keyS,valS in val.zones.sujet[keyR] %}
                                                                                 <a class="btn btn-sm btn-info mb-3 {{ btnUserStatRessource }}"
                                                                                    target="_blank"
-                                                                                   href="{{ valS.url }}"
+                                                                                   href="{{ asset(valS.url) }}"
                                                                                    data-statRessId="{{ valR.id }}"
                                                                                 >{{ valS.nom }}</a>
                                                                             {% endfor %}
@@ -802,7 +800,7 @@
                                                                                 {% for keyC,valC in val.zones.corrigeType[keyR] %}
                                                                                     <a class="btn btn-sm btn-success mb-3"
                                                                                        target="_blank"
-                                                                                       href="{{ valC.url }}">{{ valC.nom }}</a>
+                                                                                       href="{{ asset(valC.url) }}">{{ valC.nom }}</a>
                                                                                 {% endfor %}
                                                                             </td>
                                                                         </tr>
@@ -815,7 +813,7 @@
                                                                                 {% if val.zones.copieFichier[keyR] != "undefined" %}
                                                                                     <a class="btn btn-sm btn-warning"
                                                                                        target="_blank"
-                                                                                       href="{{ val.zones.copieFichier[keyR].url }}">Ma
+                                                                                       href="{{ asset(val.zones.copieFichier[keyR].url) }}">Ma
                                                                                         copie</a>
                                                                                     {% if duree == 0 or "now"|date('Ymd H:i:s') < val.zones.copie[keyR].dateCreation|date_modify(duree)|date('Ymd H:i:s') %}
                                                                                         <div class="btn btn-sm btn-danger btnDeleteCopieEtu">
@@ -844,7 +842,7 @@
                                                                                 {% if val.zones.corrigeFichier[keyR] != "undefined" %}
                                                                                     <a class="btn btn-sm btn-success"
                                                                                        target="_blank"
-                                                                                       href="{{ val.zones.corrigeFichier[keyR].url }}">Ma
+                                                                                       href="{{ asset(val.zones.corrigeFichier[keyR].url) }}">Ma
                                                                                         copie corrigée</a>
                                                                                 {% endif %}
                                                                             </td>
@@ -873,7 +871,7 @@
                                                                         {% for keyS,valS in val.zones.sujet[keyR] %}
                                                                             <a class="btn btn-sm btn-info mb-3"
                                                                                target="_blank"
-                                                                               href="{{ valS.url }}">{{ valS.nom }}</a>
+                                                                               href="{{ asset(valS.url) }}">{{ valS.nom }}</a>
                                                                         {% endfor %}
                                                                     </td>
                                                                 </tr>
@@ -883,7 +881,7 @@
                                                                         {% for keyC,valC in val.zones.corrigeType[keyR] %}
                                                                             <a class="btn btn-sm btn-success mb-3"
                                                                                target="_blank"
-                                                                               href="{{ valC.url }}">{{ valC.nom }}</a>
+                                                                               href="{{ asset(valC.url) }}">{{ valC.nom }}</a>
                                                                         {% endfor %}
                                                                     </td>
                                                                 </tr>
@@ -920,7 +918,7 @@
                                                                         <video style="max-width: 600px;" controls
                                                                                preload="metadata"
                                                                                poster="https://www.studit.fr/poster.png">
-                                                                            <source src="{{ valG.lien.url }}"
+                                                                            <source src="{{ asset(valG.lien.url) }}"
                                                                                     type="video/mp4">
                                                                             Votre navigateur ne supporte pas la balise
                                                                             "video".
@@ -935,19 +933,19 @@
                                                                         <video style="max-width: 600px;" controls
                                                                                preload="metadata"
                                                                                poster="https://www.studit.fr/poster.png">
-                                                                            <source src="{{ valG.lien.url }}" type="video/mp4">
+                                                                            <source src="{{ asset(valG.lien.url) }}" type="video/mp4">
                                                                             Votre navigateur ne supporte pas la balise "video".
                                                                         </video>
                                                                     {% elseif '.mp3' in valG.lien.url %}
                                                                         <audio style="max-width: 600px;" controls>
-                                                                            <source src="{{ valG.lien.url }}" type="audio/mpeg">
+                                                                            <source src="{{ asset(valG.lien.url) }}" type="audio/mpeg">
                                                                             Votre navigateur ne supporte pas la balise "audio".
                                                                         </audio>
                                                                     {% else %}
                                                                         <a class="btnLienGroupeRessource btn btn-xs {{ btnUserStatRessource }}"
                                                                            style="background-color: {{ valG.categorieLien.couleur }};"
                                                                            target="_blank"
-                                                                           href="{{ valG.lien.url }}"
+                                                                           href="{{ asset(valG.lien.url) }}"
                                                                            data-statRessId="{{ val.zones.groupe[keyR].id }}"
                                                                         >
                                                                             {% if valG.lien.typeLien.faIcon is defined %}
@@ -1001,7 +999,7 @@
                                                                         <div class="col-sm-12 col-md-6">
                                                                             <audio style="max-width: 600px; width: 100%"
                                                                                    controls>
-                                                                                <source src="{{ valG.url }}"
+                                                                                <source src="{{ asset(valG.url) }}"
                                                                                         type="audio/mpeg">
                                                                                 Votre navigateur ne supporte pas la
                                                                                 balise "audio".
