--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -35,7 +35,7 @@
                 popup.show();
 
                 var folderLocation = $('[data-folderUpload]').attr('data-folderUpload');
-                var url = steps + folderLocation+'docs/disc/'+idDisc+'/';
+                var url = 'upload/docs/cours/'+idDisc+'/';
 
                 $.ajax({
                     type: 'POST',
@@ -52,7 +52,7 @@
                 });
 
                 $('#docUpload').fileupload({
-                    url: steps + upload_srcSteps + folderLocation,
+                    url: "/upload/index.php",
                     dropZone:null,
                     dataType: 'json',
                     add: function(e, data) {
@@ -82,9 +82,8 @@
                                 data: {
                                     discId: idDisc,
                                     userId: $('[data-userId]').attr('data-userId'),
-                                    url: steps + folderLocation + myUrlTab[1],
                                     urlDest: url,
-                                    currentUrl: window.location.pathname,
+                                    filenameUrl: myUrlTab[0],
                                     nom: $('[data-champname="nom"]').val(),
                                     isImportant: $('[data-champname="docIsImportant"]').prop('checked'),
                                     description: CKEDITOR.instances[$('[data-champName=description]').attr('id')].getData(),
