--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -104,7 +104,7 @@
                             <div class="col-sm-3">
                                 <figure class="effect-sadie">
                                     <a target="_blank"
-                                       href="http://www.afadec.fr/dataAfadec/1er_degre/maths_remediation3_NDiaye_2013_capt/afadec_puissance.htm">
+                                       href="http://www.afadec.fr/dataAfadec/1er_degre/maths_remediation3_NDiaye_2013_capt-html/index.html">
                                         <img src="{{ asset('images/accueil/maths_lesPuissances.png') }}"
                                              class="img-responsive" alt="Mathématiques CRPE Remédiation">
                                         <figcaption>
