--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -90,6 +90,7 @@
             {% endif %}
         </div>
         {% if template == "afadec" %}
+            {#
             <div class="row mt-40">
                 <div class="col-sm-12">
                     <div class="col-sm-12">
@@ -157,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>#}
 
             {% include 'pagesFixes/afadecContent.html.twig' %}
             {% elseif template == "excellencePro" %}
@@ -167,7 +168,7 @@
                     <h4 class="heading">Mentions Légales</h4>
 
                     <p>L'AFADEC (Association de la Formation A Distance de l'Enseignement Catholique) administre
-                        cette plateforme, dont l'objectif est d'accompagner la formation au salon Excellence Pro.</p>
+                        cette plateforme, dont l'objectif est de vous proposer une formation à l'orientation et la voie professionnelle.</p>
 
                     <p>Les informations recueillies (nom, prénom, discipline, adresse mail, numéro de téléphone,
                         établissement) sont nécessaires pour votre inscription.</p>
