--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -106,7 +106,7 @@
                     $('.col-md-push-8').empty().append('<h3>Accès au site</h3><p>Bonjour,</p><p>Vous êtes bien sur l’espace de formation à distance du salon ExcellencePro. La création d‘un compte et l‘accès aux différentes ressources seront ouverts le 1<sup>er</sup> Mars</p><p>Alors à très bientôt !</p>');
                 }*/
                 if($('.copyRexcellencePro').length){
-                    $('.page-header').append('<div class="msgAlertAnnul">Attention, le salon est reporté !<br>Nouvelle date : 18 et 19 novembre 2020<br>Retrouvez le communiqué ici.</div>').css({
+                    $('.page-header').append('<div class="msgAlertAnnul">Nous vous préparons une super formation<br>sur l‘orientation et la<br>voie professionnelle en 2021-2022.</div>').css({
                         'position': 'relative'
                     });
                     $('.msgAlertAnnul').click(function(){
