pages fixes mises à jour

--- a/app/Resources/views/pagesFixes/concours.html.twig
+++ b/app/Resources/views/pagesFixes/concours.html.twig
@@ -16,48 +16,33 @@
         <div class="row">
             <div class="col-sm-7 text-justify">
                 <h2>LE CRPE ET LE CAFEP</h2>
-                <p><b>Les concours externes de recrutement de professeur des écoles (CRPE)</b> pour enseigner dans l’enseignement privé catholique sont spécifiques à l’enseignement privé  mais avec les mêmes épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
-                <p>Le CRPE externe <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
-                <p>Le concours se déroule en deux étapes : l’admissibilité et l’admission.</p>
-                <p><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98653/les-epreuves-crpe-externe-troisieme-crpe-second-crpe-interne.html">Pour voir le descriptif des épreuves du CRPE externe cliquez sur le lien.</a></p>
-                <p><b>Le concours externe du privé</b> pour enseigner dans les collèges et lycées de l’enseignement privé sous contrat <b>s’appelle le Cafep</b> : Certificat d’aptitude aux fonctions d’enseignement dans les établissements privés sous contrat du 2nd degré. Il est l’équivalent du Capes dans le public. Il s'agit du même concours pour le public et pour le privé. C'est au moment de s’inscrire que l’on opte pour l'enseignement privé.</p>
-                <p>Le Cafep concours externe, <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu'aux personnes qui remplissent les conditions pour s'inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
-                <h5 class="color2">Quelles sont les épreuves ?</h5>
-                <ul class="list-default">
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98581/les-epreuves-du-capes-externe-et-du-cafep-capes-section-histoire-et-geographie.html">Les épreuves du Cafep d’histoire-géographie</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’anglais</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’espagnol</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98572/les-epreuves-du-capes-externe-et-du-cafep-capes-section-mathematiques.html">Les épreuves du Cafep de mathématiques</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98573/les-epreuves-du-capes-externe-et-du-cafep-capes-section-lettres.html">Les épreuves du Cafep de lettres</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98569/les-epreuves-du-capes-externe-et-du-cafep-capes-section-sciences-de-la-vie-et-de-la-terre.html">Les épreuves du Cafep de SVT</a></li>
-                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98570/les-epreuves-du-capes-externe-et-du-cafep-capes-section-physique-chimie.html">Les épreuves du Cafep de physique-chimie</a></li>
-                </ul>
+                <p><b>Les concours externes de recrutement de professeur des écoles (CRPE)</b> pour enseigner dans l’enseignement privé catholique sont spécifiques à l’enseignement privé mais avec les mêmes épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
+                <p>Les enseignants des établissements d’enseignement privé <b>associés à l’État par contrat</b> sont recrutés selon les mêmes modalités et les mêmes exigences que <b>les enseignants de l’enseignement public.</b></p>
+                <p>Chaque type de concours est organisé pour l’enseignement public et pour l’enseignement privé. En effet, même s’il s’agit des mêmes épreuves et des mêmes jurys, les concours sont distincts puisqu’ils conduisent à deux « corps » d’enseignants différents.</p>
+                <p>C’est <b>au moment de l’inscription au concours</b> que vous choisissez l’enseignement privé sous contrat. Les concours d’enseignement sont à préparer dans les instituts de formation de l’enseignement catholique. Adossés aux universités catholiques ils proposent des Master MEEF et une formation de qualité.</p>
+                <p>Par ailleurs, tout candidat souhaitant s’inscrire au CRPE ou au CAFEP pour entrer dans l’enseignement catholique privé sous contrat, <b>doit obligatoirement solliciter un pré-accord</b> auprès de la Commission d'accueil et d'accord collégial (CAAC) de son domicile. Cette demande est à effectuer le plus tôt possible, dès l’inscription en M1.</p>
             </div>
             <div class="col-sm-5">
                 {% include "pagesFixes/nousContacter.html.twig" %}
             </div>
         </div>
         <div class="row">
+            <div class="col-sm-12 mb-40 mt-40">
+                <img src="{{ asset('images/accueil/concours.jpg') }}" class="" style="max-width: 100%" alt="">
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-12 text-justify">
-                <h5 class="mt-40 mb-20 color2">Où préparer les concours ?</h5>
-                <p>Les concours d’enseignement peuvent être préparés dans <a target="_blank" class="studitBlueFC" href="https://enseignement-catholique.fr/comment-se-former">les instituts de formation de l’enseignement catholique</a>. Adossés aux universités catholiques ils proposent des Master MEEF et une formation de qualité.</p>
-                <h5 class="mt-40 mb-20 color2">Pré-accord puis accord sont obligatoires pour entrer dans l’Enseignement catholique</h5>
-                <p>Tout candidat souhaitant s’inscrire au CRPE ou au CAFEP pour entrer dans l’enseignement catholique privé sous contrat, doit obligatoirement solliciter un <b>pré-accord</b> auprès de la Commission d'accueil et d'accord collégial (CAAC) de son domicile.</p>
-                <p>Cette demande est à effectuer le plus tôt possible :</p>
-                <ul class="list-default">
-                    <li>dès l’inscription en M1 ;</li>
-                    <li>ou dès l’inscription au concours pour les personnes déjà titulaires d’un M1 ou d’un M2.</li>
-                </ul>
-                <p>Le pré-accord est un avis donné par des chefs d’établissement à l’occasion d’un entretien :</p>
                 <ul class="list-default">
                     <li>
-                        <p><b>si l’entretien est positif</b>, le pré-accord est délivré. <b>Après la réussite au concours</b> le professeur stagiaire <b>s’inscrit dans un ISFEC</b> afin de suivre la formation pendant son année de stage, <b>le préaccord collégial se transforme alors automatiquement en accord collégial</b></p>
-                        <p>Dans le cas où le stagiaire n’aurait  pas suivi la formation, pendant l’année de stage, dans un ISFEC, il serait reçu pour un nouvel entretien par la CAAC afin d’obtenir l’accord collégial.</p>
+                        <p><b>En premier degré, il existe un seul concours de recrutement, le CRPE :</b></p>
+                        <p>Concours de Recrutement des Professeurs des Écoles. <b>Il s’adresse aux étudiants inscrits en master 2</b>, prioritairement master MEEF ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
+                        <p><a class="studitBlueFC" target="_blank" href="https://www.devenirenseignant.gouv.fr/cid157967/programmes-crpe-session-2022.html">Cliquez pour consulter le détail des épreuves</a></p>
                     </li>
                     <li>
-                        <p><b>si l’entretien est négatif</b>, le pré-accord est refusé. Il est possible de faire appel de cette décision par courrier recommandé avec accusé de réception dans un délai de 60 jours à compter de la date de réception de la notification du refus. L'entretien d'appel a lieu lors de la prochaine CAAC . Le refus en appel est définitif.</p>
-                        <p>L’accord collégial engage collectivement les Chefs d’Etablissement du réseau de l’Enseignement Catholique dans le cadre des accords nationaux sur l’emploi.</p>
-
+                        <p><b>En second degré, les futurs enseignants sont recrutés par le CAFEP :</b></p>
+                        <p>Certificat d’Aptitude aux Fonctions de maître dans les classes du second degré de l’Enseignement Privé. <b>Il s’adresse aux étudiants inscrits en master 2</b> ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
+                        <p><a target="_blank" class="studitBlueFC" href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043075486">Cliquez pour consulter les modalités d’organisation</a></p>
                     </li>
                 </ul>
             </div>
