--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -819,6 +819,7 @@
                                     <option value="20">20</option>
                                     <option value="30">30</option>
                                     <option value="40">40</option>
+                                    <option value="100">100</option>
                                     <option value="all">Toutes les lignes</option>
                                 </select>
                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
