--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -908,6 +908,7 @@
                                         <option value="20">20</option>
                                         <option value="30">30</option>
                                         <option value="40">40</option>
+                                        <option value="100">100</option>
                                         <option value="all">Toutes les lignes</option>
                                         <option value="all">Toutes les lignes</option>
                                     </select>
